# scum-code

./: .pre-commit-config.yaml  MODULE.bazel
.github/workflows/: ci.yaml
analysis/scum/adc/: BUILD.bazel  adc_characterization_main.py
analysis/scum/adc/capacitor/: BUILD.bazel  adc_capacitor_main.py
analysis/scum/adc/enob/: BUILD.bazel  adc_enob_main.py  adc_enob_scope_averaging_main.py  adc_enob_scope_main.py
analysis/scum/adc/mux/: BUILD.bazel  adc_mux_all_types_main.py  adc_mux_main.py
analysis/scum/adc/mux/data/: BUILD.bazel  adc_mux_data_all_types_1.csv  adc_mux_data_all_types_2.csv
analysis/scum/adc/noise/: BUILD.bazel
analysis/scum/antenna/: BUILD.bazel  antenna_rssi_main.py
analysis/scum/antenna/data/: BUILD.bazel  antenna_rssi_data_field.csv
analysis/scum/radio/rx/: BUILD.bazel  rx_if_main.py
analysis/scum/radio/tuning/: BUILD.bazel  tuning_code.py  tuning_codes_main.py
arduino/: BUILD.bazel
openmote/jlink/: BUILD.bazel
openwsn/: BUILD.bazel
scum/utils/: BUILD.bazel
simulation/cic_filter/: BUILD.bazel  cic_filter_comb_main.py  cic_filter_decimator.py  cic_filter_main.py
simulation/differential_mesh/: BUILD.bazel  differential_mesh_analysis_main.py  differential_mesh_analysis_square_main.py  differential_mesh_graph.py  differential_mesh_grid_main.py  differential_mesh_iterative_solver_main.py  differential_mesh_simulator_main.py  differential_mesh_solver_main.py  differential_mesh_standard_error_main.py
tapeout/clocks/: BUILD.bazel
tapeout/power/: BUILD.bazel
tapeout/power/data/: ldo_digital_simulated.csv
tapeout/rf/: BUILD.bazel
utils/: BUILD.bazel
utils/network/: BUILD.bazel  s1p_viewer.py  s1p_viewer_main.py
utils/ni_daq/: BUILD.bazel
utils/plotter/: BUILD.bazel  adc_muxed_data_live_plotter_main.py  dummy_live_plotter.py  live_plotter.py  serial_live_plotter.py
utils/regression/: BUILD.bazel  linear_regression.py
utils/serial/: BUILD.bazel
utils/visualization/: BUILD.bazel
(+16 files in other folders)
